fixed some spacing, took away unnecessary labels

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -2,7 +2,7 @@
 #background-color{
   width: auto;
   background: rgb(215,255,241);
-  background: linear-gradient(180deg, rgba(215,255,241,1) 60%, rgba(255,255,255,1) 100%);
+  background-image: linear-gradient(#588157, white);
   margin-top: 60px;
   padding-top: 10px;
 }
@@ -23,6 +23,7 @@
 
 .image-show{
   margin-bottom: 10px;
+
 }
 
 .booking-form-show{
@@ -33,3 +34,13 @@
   margin: 20px;
   background-color: transparent;
 }
+
+.booking-form-show{
+  padding-left: 30px;
+}
+
+
+.image-show{
+  padding-right: 20px;
+}
+
